SERVER-35050 Don't abort collection clone due to negative document count